--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,6 +4,8 @@ environment:
   DOTNET_CLI_TELEMETRY_OPTOUT: 1
 before_build:
   - nuget restore
+after_test:
+  - nuget pack
 test: off
 artifacts:
   - path: '**\Hyperion.*.nupkg'
@@ -16,4 +18,4 @@ deploy:
   api_key:
     secure: 66j5rHXCJ94Iwo7XG4oWAto/v2KPig6mi9Y06C79XCw=
   skip_symbols: false
-  artifact: /.*\.nupkg/
+  artifact: /.*\.nupkg/p
