--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,10 +12,4 @@ artifacts:
     name: Hyperion
 nuget:
   account_feed: false
-  project_feed: false
-deploy:
-  provider: NuGet
-  api_key:
-    secure: 66j5rHXCJ94Iwo7XG4oWAto/v2KPig6mi9Y06C79XCw=
-  skip_symbols: false
-  artifact: /.*\.nupkg/p
+  project_feed: true
