--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,6 +4,8 @@ before_build:
   - nuget restore
 after_build:
   - nuget spec
+  - nuget pack
+  - nuget push
 nuget:
   account_feed: false
   project_feed: true
