--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,7 +5,7 @@ before_build:
 after_build:
   - nuget spec
   - nuget pack
-  - nuget push Package.1.0.0.nupkg
+  - nuget push Package.1.0.0.nupkg -Source https://ci.appveyor.com/nuget/jp-public/hyperion
 nuget:
   account_feed: false
   project_feed: true
