--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,7 +4,7 @@ before_build:
   - nuget restore
 after_build:
   - dotnet pack
-  - nuget push .\bin\Debug\Hyperion.1.0.0.nupkg -Source https://www.myget.org/F/jeffpang/api/v2/package -ApiKey %myget_apikey%
+  - nuget push .\Hyperion\bin\Debug\Hyperion.1.0.0.nupkg -Source https://www.myget.org/F/jeffpang/api/v2/package -ApiKey %myget_apikey%
 nuget:
   account_feed: false
   project_feed: true
